# mythic-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arch.yaml  imp.json  local-config-sample.cmake
platform/mythic_android/: CMakeLists.txt  mythic_android-config.cmake
platform/mythic_android/source/: Android_App.h  Mythic_Android.cpp  Mythic_Android.h  android_native_app_glue.cpp  android_native_app_glue.h  android_utility.cpp  android_utility.h
platform/mythic_android/source/audio/: Android_Speaker.cpp  Android_Speaker.h
platform/mythic_android/source/display/: Android_Frame.cpp  Android_Frame.h  Android_Shader_Loader.cpp  Android_Shader_Loader.h
platform/mythic_android/source/input/: Android_Input.cpp  Android_Input.h  Surface_Trigger.h
platform/mythic_desktop/: CMakeLists.txt
platform/mythic_desktop/desktop_display/: CMakeLists.txt  desktop_display-config.cmake
platform/mythic_desktop/desktop_input/: CMakeLists.txt
platform/mythic_desktop/source/desktop/: Desktop.cpp  Desktop.h  Desktop_File_Loader.cpp  Desktop_File_Loader.h
platform/mythic_desktop/source/desktop_audio/: Desktop_Speaker.cpp  Desktop_Speaker.h  interface.cpp  interface.h
platform/workshop/: CMakeLists.txt
platform/workshop/source/: Workshop.cpp  Workshop.h
projects/: CMakeLists.txt
projects/client/audio/audio_player/: CMakeLists.txt
projects/client/audio/aura/: CMakeLists.txt  aura-config.cmake  imp.json
projects/client/audio/aura_composing/: CMakeLists.txt
projects/client/audio/aura_engineering/: CMakeLists.txt
projects/client/audio/aura_generation/: CMakeLists.txt
projects/client/audio/aura_graphing/: CMakeLists.txt
projects/client/audio/aura_graphing_music/: CMakeLists.txt
projects/client/audio/aura_music/: CMakeLists.txt
projects/client/audio/aura_performing/: CMakeLists.txt
projects/client/audio/aura_performing_music/: CMakeLists.txt
projects/client/audio/aura_processing/: CMakeLists.txt
projects/client/audio/aura_producing/: CMakeLists.txt
projects/client/audio/aura_sequencing/: CMakeLists.txt
projects/client/audio/aura_visualizing/: CMakeLists.txt
projects/client/audio/foley/: CMakeLists.txt
projects/client/audio/foley_graphing/: CMakeLists.txt
projects/client/audio/instrument_foley/: CMakeLists.txt
projects/client/audio/sequencing/: CMakeLists.txt
projects/client/audio/signal_graph/: CMakeLists.txt
projects/client/audio/tuning/: CMakeLists.txt
projects/client/aura/aura_player/: CMakeLists.txt
projects/client/bloom/: CMakeLists.txt
projects/client/bloom/test/: CMakeLists.txt
projects/client/bloom_scenery/: CMakeLists.txt
projects/client/bloom_texturing/: CMakeLists.txt
projects/client/client/: CMakeLists.txt
projects/client/general/resourceful/: CMakeLists.txt
projects/client/gui/bloom/: CMakeLists.txt
projects/client/gui/bloom_lab/: CMakeLists.txt
projects/client/gui/bloom_lookinglass/: CMakeLists.txt
projects/client/gui/bloom_texturing/: CMakeLists.txt
projects/client/gui/bloom_widgetry/: CMakeLists.txt
projects/client/haft/: CMakeLists.txt  haft-config.cmake
projects/client/haft/events/: Event_Type.h  Value_Event.h
projects/client/input/haft/: CMakeLists.txt
projects/client/lookinglass/: lookinglass.cmake
projects/client/lookinglass/drawing/: CMakeLists.txt  drawing-config.cmake
projects/client/lookinglass/frame/: CMakeLists.txt  frame-config.cmake
projects/client/lookinglass/glass/: CMakeLists.txt  glass-config.cmake
projects/client/lookinglass/glaze/: CMakeLists.txt
projects/client/lookinglass/glow/: CMakeLists.txt  glow-config.cmake
projects/client/lookinglass/lookinglass/: CMakeLists.txt  lookinglass-config.cmake
projects/client/lookinglass/mesh_export/: CMakeLists.txt  mesh_export-config.cmake
projects/client/lookinglass/modeling/: CMakeLists.txt  modeling-config.cmake
projects/client/lookinglass_bloom/: CMakeLists.txt
projects/client/particular/: CMakeLists.txt
projects/client/resourceful/: CMakeLists.txt
projects/client/scenery/: CMakeLists.txt  scenery-config.cmake
projects/client/visual/: visual.cmake
projects/core/metahub/: .gitignore  CMakeLists.txt  metahub-config.cmake
projects/core/mythic/: CMakeLists.txt  mythic-config.cmake
projects/generation/archaeology/: CMakeLists.txt
projects/generation/architect/: CMakeLists.txt  architect-config.cmake
projects/generation/sculptor/: CMakeLists.txt  sculptor-config.cmake
projects/lab/: lab.cmake
projects/lab/architecture_lab/: CMakeLists.txt  architecture_lab-config.cmake
projects/lab/bloom_graphing/: CMakeLists.txt
projects/lab/bloom_nobby/: CMakeLists.txt
projects/lab/lab/: CMakeLists.txt  lab-config.cmake
projects/lab/nobby/: CMakeLists.txt
projects/lab/sprite_lab/: CMakeLists.txt
projects/lab/workshop/: CMakeLists.txt
projects/misc/achieving/: CMakeLists.txt
projects/misc/breeze/: CMakeLists.txt
projects/misc/commoner/: CMakeLists.txt  README.md
projects/misc/containment/: CMakeLists.txt
projects/misc/debugging/: CMakeLists.txt
projects/misc/emission/: CMakeLists.txt
projects/misc/logger/: CMakeLists.txt
projects/misc/logger/source/: logger.h
projects/misc/mapping/: CMakeLists.txt
projects/misc/math/: CMakeLists.txt  arch.yaml  math-config.cmake
projects/misc/mythic/: CMakeLists.txt
projects/misc/platforming/: CMakeLists.txt
projects/misc/promising/: CMakeLists.txt
projects/misc/quartz/: CMakeLists.txt  quartz-config.cmake
projects/misc/random/: CMakeLists.txt
projects/misc/randomly/: CMakeLists.txt
projects/misc/songbird/: CMakeLists.txt  songbird-config.cmake
projects/misc/spatial/: CMakeLists.txt  spatial-config.cmake
projects/misc/spatial_old/: CMakeLists.txt  arch.yaml
projects/misc/textual/: CMakeLists.txt
projects/misc/threading/: CMakeLists.txt
projects/misc/vectoring/: CMakeLists.txt  vectoring-config.cmake
projects/platform/desktop/: CMakeLists.txt  desktop-config.cmake
projects/server/ground/: CMakeLists.txt
projects/server/sqling/: CMakeLists.txt
projects/server/substance/: CMakeLists.txt
projects/server/vineyard/: CMakeLists.txt
(+1525 files in other folders)
